Fix nav z-index: for LogOutModal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -258,6 +258,7 @@ footer {
 
 /*✅ nav*/
 .header {
+  z-index: 3;
   position: relative;
   box-sizing: border-box;
   flex-grow: 1;
@@ -396,7 +397,7 @@ footer {
 
 .profile__container {
   .profile__title {
-    z-index: 3;
+    z-index: 2;
     border-left: 1px solid $color-border;
     border-right: 1px solid $color-border;
     padding: 0 16px;
@@ -553,6 +554,7 @@ footer {
 /*💬 tab nav*/
 .nav-tab {
   z-index: -1;
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -796,7 +798,7 @@ footer {
 
 //💬 Log Out Modal Component
 .modal-layout {
-  z-index: 99;
+  z-index: 999;
   position: fixed;
   left: 0;
   right: 0;
@@ -806,63 +808,70 @@ footer {
   opacity: 0;
   transition: all 0.15s ease-in-out;
   pointer-events: none;
-  .modal-logout {
-    position: absolute;
-    bottom: 120px;
-    left: 20px;
-    .modal-logout-content-1 {
-      width: 300px;
-      padding: 12px 0;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.3);
-      font-size: 15px;
-      .modal-logout-header {
-        padding: 12px 16px;
-        border-bottom: 1px solid $color-border;
-        .modal-logout-header__container {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          .modal-logout-header__container__userImg {
-            width: 48px;
-            height: 48px;
-            border-radius: 25px;
-            background-color: rgb(86, 196, 255);
-          }
-          .modal-logout-header__container__userInfo {
+  .modal-layout-inside {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 68%;
+    display: flex;
+    .modal-logout {
+      position: sticky;
+      left: -13px;
+      background-color: rgba(0, 0, 0, 0.3);
+      .modal-logout-content-1 {
+        width: 300px;
+        padding: 12px 0;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.3);
+        font-size: 15px;
+        .modal-logout-header {
+          padding: 12px 16px;
+          border-bottom: 1px solid $color-border;
+          .modal-logout-header__container {
             display: flex;
-            flex-direction: column;
-            flex: 1;
-            padding: 0 12px;
-            .modal-logout-header__container__userInfo__userName {
-              font-weight: 800;
+            flex-direction: row;
+            align-items: center;
+            .modal-logout-header__container__userImg {
+              width: 48px;
+              height: 48px;
+              border-radius: 25px;
+              background-color: rgb(86, 196, 255);
             }
-            .modal-logout-header__container__userInfo__userId {
-              color: $color-id;
+            .modal-logout-header__container__userInfo {
+              display: flex;
+              flex-direction: column;
+              flex: 1;
+              padding: 0 12px;
+              .modal-logout-header__container__userInfo__userName {
+                font-weight: 800;
+              }
+              .modal-logout-header__container__userInfo__userId {
+                color: $color-id;
+              }
             }
-          }
-          .modal-logout-header__container__userInfo__check {
-            color: $color-main;
+            .modal-logout-header__container__userInfo__check {
+              color: $color-main;
+            }
           }
         }
+        .modal-logout-body {
+          padding: 16px;
+          cursor: pointer;
+          transition: 0.3s background-color ease-in-out;
+        }
+        .modal-logout-body:hover {
+          background-color: #f6f9f9;
+        }
       }
-      .modal-logout-body {
-        padding: 16px;
-        cursor: pointer;
-        transition: 0.3s background-color ease-in-out;
+      .modal-logout-content-2 {
+        position: absolute;
+        left: 12%;
+        border-top: 10px solid white;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-bottom: 10px solid transparent;
       }
-      .modal-logout-body:hover {
-        background-color: #f6f9f9;
-      }
-    }
-    .modal-logout-content-2 {
-      position: absolute;
-      left: 12%;
-      border-top: 10px solid white;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-bottom: 10px solid transparent;
     }
   }
 }
